tests/ast_interpreter/err_string_index_out_of_bounds.expected
<string>:3:11: error: string index out of bounds
    print(str[10]);
          ^^^^^^^
