tests/ast_interpreter/err_string_index_out_of_bounds.nx
fun main() {
    var str = "hi";
    print(str[10]);
}